add tickets and promocodes small changes for company billing and events
